* Becoming a herm in the intro now starts you with a seven inch cock (bigger than before).
* Added a slew of new cock size adjectives (and reduced their prevalence in scenes). The descriptors should be slightly less repetitive now.
* Added a review/redo option to character creation in the intro.
* Renamed FemmeBoy body type to Trap.
* Added a Voluptous option for female start.

* Streamlined Chief talk scenes (removed Next, now looks more in line with other NPC dialogue).
* Adjusted pacing in the Equines win scenes. They are now split up into multiple pages rather than one long scene.
* Adjusted pacing in Barnaby's blowjob scenes (the bartender of the Maidens' Bane) by splitting the scene in multiple pages.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4.24
--------------
* Fixed a bug that didn't correctly remove lactation when breasts are flat.
* Changed Androgyn and Testos items so that they both reduce breast size to flat level.
* Changed Estros item so that it will increase breast size (though not as much as Bovia).

Version 0.4.23
--------------
* Fixed a bug that would occur on trying to question the lagomorphs after winning to them.

Version 0.4.22
--------------
* Changed version numbering (v is the 22nd letter, so .22)
* Added a polyfill that fixes an issue with alchemy on Internet Explorer
* Setting the Pics: On/Off in the data menu now affects the combat portraits of party/enemies
* More code cleanup and typo fixes, courtesy of CalmKhaos
* CSS style cleanup, courtesy of hindmanj on github

Version 0.4u
------------
* New scene: Terry fucks player vagina. Variations for horsecock. Written by LD and QB.

* More typos fixed (Fera). Thanks CK!
* Fixed a bug in the pregnancy code, making pregnancies not be correctly detected