@@ -16,6 +16,7 @@ Version 0.4.25
 * Added a review/redo option to character creation in the intro.
 * Renamed FemmeBoy body type to Trap.
 * Added a Voluptous option for female start.
+* Using cheats to get items in the tent now gives 10 of every item instead of 1.
 
 * Streamlined Chief talk scenes (removed Next, now looks more in line with other NPC dialogue).
 * Adjusted pacing in the Equines win scenes. They are now split up into multiple pages rather than one long scene.
